# windows11-manager

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  config.example.cjs  config.example.js  config.js  eslint.config.js  package-lock.json  package.json  vitest.config.js
.claude/: CLAUDE.md
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/plans/: 2026-02-28-extract-pure-logic-unit-tests.md
examples/: autoplace-server.js  focusWindow.js  getStats.js  placeWindows.js  setWallpapers.js  swapWindows.js
scripts/: sync-tauri-version.js
src/: actions.js  config.js  fancyzones-helpers.js  fancyzones.js  fancyzones.test.js  geometry.js  geometry.test.js  http-server.js  index.js  monitors-helpers.js  monitors.js  monitors.test.js  mqtt.js  placement-helpers.js  placement.js  placement.test.js  scale.js  scale.test.js  stats-helpers.js  stats.js  stats.test.js  store-helpers.js  store.js  store.test.js  sysapi.js  virtual-desktop.js  wallpapers.js  window-match.js  window-match.test.js  windows-helpers.js  windows.js  windows.test.js  ws-client.js
src/helpers/: types.ts
src/lib/: index.js
tauri-app/: package-lock.json  package.json
tauri-app/src/: index.html  main.html  main.js  settings.js  style.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: lib.rs  logging.rs  mqtt.rs  updater.rs  ws_server.rs
(+1 files in other folders)
