[package]
name = "windows11-manager-tray"
version = "1.0.1"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "macros"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
fern = "0.7"
chrono = "0.4"
